# TypeRight

./: .Background.cpp.swp  .Bruh.cpp.swp  .TypeRight.cpp.swp  .compileTimeData.awk  .gitignore  .menu.cpp.swp  .rawTimeData  .travis.yml  Background.cpp  Background.h  Bruh.cpp  Bruh.h  CMakeLists.txt  Cat.cpp  Cat.h  Collision.cpp  Collision.h  Dragon.cpp  Dragon.h  Fireball.cpp  Fireball.h  GameOver.cpp  GameOver.h  Hero.cpp  Hero.h  Level.cpp  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Lightsaber.cpp  Lightsaber.h  Makefile  Pegasus.cpp  Pegasus.h  README.md  Rubric.txt  (+33 more)
imgs/: lowerBitDepth.sh
scripts/: LevelAdder.pl  SpriteAdder.pl  imageCombiner.py
words/: level1.txt  level2.txt  level3.txt
